--- a/src/Engine/Engine.vcxproj
+++ b/src/Engine/Engine.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="ConfigManager.cpp" />
     <ClCompile Include="RenderDevice.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="SvcInput.cpp" />
     <ClCompile Include="SvcLog.cpp" />
     <ClCompile Include="SvcRender.cpp" />
@@ -193,6 +194,8 @@
     <ClInclude Include="..\..\inc\Engine\ConfigManager.h" />
     <ClInclude Include="..\..\inc\Engine\RenderDevice.h" />
     <ClInclude Include="..\..\inc\Engine\IndexBuffer.h" />
+    <ClInclude Include="..\..\inc\Engine\Resource.h" />
+    <ClInclude Include="..\..\inc\Engine\ResourceManager.h" />
     <ClInclude Include="..\..\inc\Engine\SvcInput.h" />
     <ClInclude Include="..\..\inc\Engine\SvcLog.h" />
     <ClInclude Include="..\..\inc\Engine\Serializer.h" />
