add config file and tileset file

--- a/src/Engine/Engine.vcxproj
+++ b/src/Engine/Engine.vcxproj
@@ -177,6 +177,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="ConfigDesc.cpp" />
     <ClCompile Include="ConfigManager.cpp" />
     <ClCompile Include="RenderDevice.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
@@ -187,10 +188,15 @@
     <ClCompile Include="SvcWindow.cpp" />
     <ClCompile Include="TileRenderer.cpp" />
     <ClCompile Include="TileSet.cpp" />
+    <ClCompile Include="TileSetDesc.cpp" />
+    <ClCompile Include="TileSetInstance.cpp" />
+    <ClCompile Include="TileSetModel.cpp" />
+    <ClCompile Include="xmlClassRegistry.cpp" />
     <ClCompile Include="XMLUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\inc\Engine\Application.h" />
+    <ClInclude Include="..\..\inc\Engine\ConfigDesc.h" />
     <ClInclude Include="..\..\inc\Engine\ConfigManager.h" />
     <ClInclude Include="..\..\inc\Engine\RenderDevice.h" />
     <ClInclude Include="..\..\inc\Engine\IndexBuffer.h" />
@@ -204,7 +210,11 @@
     <ClInclude Include="..\..\inc\Engine\SvcWindow.h" />
     <ClInclude Include="..\..\inc\Engine\TileRenderer.h" />
     <ClInclude Include="..\..\inc\Engine\TileSet.h" />
+    <ClInclude Include="..\..\inc\Engine\TileSetDesc.h" />
+    <ClInclude Include="..\..\inc\Engine\TileSetInstance.h" />
+    <ClInclude Include="..\..\inc\Engine\TileSetModel.h" />
     <ClInclude Include="..\..\inc\Engine\Types.h" />
+    <ClInclude Include="..\..\inc\Engine\xmlClassRegistry.h" />
     <ClInclude Include="..\..\inc\Engine\XMLUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
